--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.7",
     "expo-server-sdk": "^3.14.0",
     "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "pg": "^8.14.0"
